--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -41,7 +41,7 @@
             android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/addtocartsearchbtn2"
+            android:id="@+id/couponbtn"
             style="@style/Widget.Material3.Button.ElevatedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -349,12 +349,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Checkout "
             android:background="@color/transparent"
-            android:textSize="20dp"
-            android:textColor="@color/black"
             android:paddingHorizontal="20dp"
-            android:textStyle="bold" />
+            android:text="Checkout "
+            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
