--- a/app/src/main/res/layout/confirmorder_card.xml
+++ b/app/src/main/res/layout/confirmorder_card.xml
@@ -121,7 +121,7 @@
                         android:visibility="gone" />
 
                     <TextView
-                        android:id="@+id/textView13"
+                        android:id="@+id/emptyrestxt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Qty"
