--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -188,7 +188,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_margin="8sp"
+        android:layout_margin="10sp"
         app:cardBackgroundColor="#3334E2D3"
         app:cardElevation="0dp"
         app:cardUseCompatPadding="true"
@@ -203,29 +203,25 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Cart Breakdown"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
+                android:textSize="20dp"
+                android:text="Bill Summary" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-
                 >
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Cart Total"
-                    android:textSize="20sp"
-
-
-                    />
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
+                    android:textColor="@color/grey_700" />
 
                 <TextView
                     android:id="@+id/cartTotal"
@@ -233,7 +229,8 @@
                     android:layout_height="wrap_content"
                     android:text="Rs.2000"
                     android:textAlignment="viewEnd"
-                    android:textSize="20sp" />
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
+                    android:textColor="@color/grey_700" />
 
 
             </LinearLayout>
@@ -249,10 +246,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Discount on MRP"
-                    android:textSize="20sp"
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
 
 
-                    />
+                    android:textColor="@color/grey_700" />
 
                 <TextView
                     android:id="@+id/discount"
@@ -260,37 +257,38 @@
                     android:layout_height="wrap_content"
                     android:text="-Rs.200"
                     android:textAlignment="viewEnd"
-                    android:textSize="20sp" />
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
+                    android:textColor="@color/grey_700" />
 
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
 
-                >
+<!--                >-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Delivery charges"
-                    android:textSize="20sp"
-
-
-                    />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Add address"
-                    android:textAlignment="viewEnd"
-
-                    android:textSize="20sp" />
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Delivery charges"-->
+<!--                    android:textSize="20sp"-->
 
 
-            </LinearLayout>
+<!--                    />-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Add address"-->
+<!--                    android:textAlignment="viewEnd"-->
+
+<!--                    android:textSize="20sp" />-->
+
+
+<!--            </LinearLayout>-->
 
             <View
                 android:layout_width="match_parent"
@@ -311,9 +309,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="To Pay"
-                    android:textColor="@color/black"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
+                    android:textSize="20dp"
 
                     />
 
@@ -323,9 +320,8 @@
                     android:layout_height="wrap_content"
                     android:text="Rs.2000"
                     android:textAlignment="viewEnd"
-                    android:textColor="@color/black"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
+                    android:textSize="20dp" />
 
 
             </LinearLayout>
