--- a/app/src/main/res/layout/activity_clinicaldocs.xml
+++ b/app/src/main/res/layout/activity_clinicaldocs.xml
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Not Available"
+            android:text="Coming Soon"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     </LinearLayout>
