--- a/app/src/main/res/layout/fragment_why_prescription.xml
+++ b/app/src/main/res/layout/fragment_why_prescription.xml
@@ -8,7 +8,7 @@
     android:background="@android:color/transparent">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/catimg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_round_remove" />
@@ -50,8 +50,7 @@
             android:layout_height="match_parent"
             android:layout_marginHorizontal="20sp"
             android:background="@color/transparent"
-            android:scaleX="2"
-            android:scaleY="2"
+            android:scaleType="center"
             android:src="@drawable/ic_baseline_navigate_before_24" />
 
         <TabWidget
@@ -66,12 +65,10 @@
             android:layout_height="match_parent"
             android:layout_marginHorizontal="20sp"
             android:background="@color/transparent"
-            android:scaleX="2"
-            android:scaleY="2"
             android:src="@drawable/ic_baseline_navigate_next_24"
 
 
-            />
+            tools:ignore="TouchTargetSizeCheck" />
 
 
     </LinearLayout>
