--- a/app/src/main/res/layout/mycart_card.xml
+++ b/app/src/main/res/layout/mycart_card.xml
@@ -22,7 +22,7 @@
         app:strokeColor="@color/material_on_surface_stroke"
         app:strokeWidth="1dp">
 
-        <com.google.android.material.button.MaterialButton
+       <!-- <com.google.android.material.button.MaterialButton
             android:id="@+id/deletebtn"
             android:layout_width="24dp"
             android:layout_height="24dp"
@@ -31,7 +31,7 @@
             android:rotation="270"
             app:backgroundTint="@color/red_500"
             tools:layout_gravity="right" />
-
+-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,25 +62,31 @@
                 android:layout_height="wrap_content"
 
                 android:text="MRP-Rs.1500"
-                android:textSize="14dp" />
+                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline"
+                />
 
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Our Price"
+                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
+                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|center_horizontal"
                 android:orientation="horizontal">
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/prodctMRP"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="14dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="2dp"
                     android:layout_weight="1"
-                    android:text="Rs.999"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-
-
-                    android:textColor="@color/black" />
+                    android:text="₹ 999"
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline"
+                    android:textSize="12sp"
+                     />
 
                 <LinearLayout
                     android:id="@+id/quantitybtn"
@@ -96,8 +102,8 @@
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/minusbtn"
                         style="@android:style/Widget.Material.ImageButton"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:background="@drawable/minus_24"
                          />
 
@@ -114,8 +120,8 @@
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/addbtn"
                         style="@android:style/Widget.Material.ImageButton"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:background="@drawable/ic_baseline_add_24" />
                 </LinearLayout>
 
