--- a/app/src/main/res/layout/fragment_search_medicine.xml
+++ b/app/src/main/res/layout/fragment_search_medicine.xml
@@ -71,6 +71,7 @@
     <!--                android:alwaysDrawnWithCache="true" />-->
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="wrap_content"
+        android:id="@+id/searchImageView"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/carousels"
@@ -81,6 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:foregroundGravity="center"
+        android:visibility="gone"
 
         />
     <androidx.recyclerview.widget.RecyclerView
