--- a/app/src/main/res/layout/address_card.xml
+++ b/app/src/main/res/layout/address_card.xml
@@ -46,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Delete"
+                android:textSize="14dp"
                 android:textColor="@color/red_900"
                 android:textStyle="bold"
                 app:strokeColor="@color/red_800" />
@@ -57,7 +58,7 @@
             android:id="@+id/address_line1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:paddingHorizontal="5dp"
             android:text="3 Newbridge court"
             android:textSize="18dp"
             app:layout_constraintStart_toStartOf="@+id/linearLayout6"
@@ -68,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
-            android:padding="5dp"
+            android:paddingHorizontal="5dp"
             android:text="Chino Hills,CA 91709,"
             android:textSize="18dp"
             app:layout_constraintStart_toStartOf="@+id/address_line1"
