--- a/app/src/main/res/layout/selectaddress.xml
+++ b/app/src/main/res/layout/selectaddress.xml
@@ -4,20 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AllProducts.SelectAddressActivity"
-
+    android:id="@+id/selectAddress"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <include layout="@layout/tool_bar"/>
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/selectAdd_backbtn"
-        style="@style/Widget.MaterialComponents.Toolbar.Primary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape"
-        android:minHeight="?attr/actionBarSize"
-        app:navigationIcon="@drawable/arrow_back"
-        app:title="Select Address" />
+
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/addressrecycleview2"
@@ -25,16 +20,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/Addaddressbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        app:fabSize="normal"
-        app:useCompatPadding="true"
-        app:srcCompat="@drawable/ic_round_add_24" />
+    <include layout="@layout/float_button"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/frag1"
+        />
+
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
