--- a/app/src/main/res/layout/activity_enter_otp.xml
+++ b/app/src/main/res/layout/activity_enter_otp.xml
@@ -6,40 +6,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center_horizontal">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/toolbars"
-        android:background="@drawable/shape"
-        android:padding="16dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/login"
-            android:text="Login Account"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello! Welcome back to your account !"
-            android:layout_below="@id/login"/>
+<!--    <RelativeLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/toolbars"-->
+<!--        android:background="@drawable/shape"-->
+<!--        android:padding="16dp">-->
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"/>-->
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/login"-->
+<!--            android:text="Login Account"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textSize="20dp"/>-->
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Hello! Welcome back to your account !"-->
+<!--            android:layout_below="@id/login"/>-->
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_baseline_account_circle_24" />
-    </RelativeLayout>
+<!--        <ImageView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:src="@drawable/ic_baseline_account_circle_24" />-->
+<!--    </RelativeLayout>-->
 
     <ImageView
         android:id="@+id/pharmapic"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="450dp"
         android:layout_below="@+id/toolbars"
         android:src="@drawable/_601031" />
     <TextView
@@ -182,15 +182,30 @@
             android:visibility="visible" />
 
     </LinearLayout>
-
-
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/submit_otp_button"
-        android:layout_width="wrap_content"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:backgroundTint="@color/teal_A700"
         android:text="Submit"
-        app:cornerRadius="20dp" />
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+
+
+<!--    <Button-->
+<!--        android:id="@+id/submit_otp_button"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:backgroundTint="@color/teal_A700"-->
+<!--        android:text="Submit"-->
+<!--        app:cornerRadius="20dp" />-->
 
 </LinearLayout>
