--- a/app/src/main/res/layout/layout_screen.xml
+++ b/app/src/main/res/layout/layout_screen.xml
@@ -24,7 +24,7 @@
         android:id="@+id/tv_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/ibm_regular"
+        android:fontFamily="@font/roboto_regular"
         android:padding="10dp"
         android:text="@string/desc_one"
         android:textAlignment="center"
