--- a/app/src/main/res/layout/mycart_card.xml
+++ b/app/src/main/res/layout/mycart_card.xml
@@ -49,8 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Nivea Body Lotion,600ml"
-                    android:textColor="@color/black"
-                    android:textSize="18dp"
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
                     android:textStyle="bold" />
 
 
@@ -61,9 +60,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
+                android:padding="2dp"
                 android:text="MRP-Rs.1500"
-                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline"
-                />
+                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
@@ -107,15 +106,14 @@
                         android:background="@drawable/minus_24"
                          />
 
-                    <TextView
+                    <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/quantitynumber"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:ems="2"
                         android:gravity="center"
                         android:text="0"
-                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
-                        android:textSize="22dp" />
+                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/addbtn"
