--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
-        <item>@font/poppins</item>
-        <item>@font/poppins_bold</item>
-        <item>@font/poppins_light</item>
-        <item>@font/poppins_medium</item>
-        <item>@font/roboto_condensed_bold</item>
-        <item>@font/work_sans_black</item>
-        <item>@font/work_sans_bold</item>
-        <item>@font/work_sans_semibold</item>
+        <item>@font/roboto</item>
     </array>
 </resources>
